--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,7 @@
-<div class="footer">
-  <p>This is your footer</p>
-</div>
+<!-- Footer Component HTML 
+<footer class="footer">
+  <div class="container">
+    <p>Your heart is your life</p>
+  </div>
+</footer>
+-->
